# Saibas-Portal

./: LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: banner.html  base.html  bootstrap.html  careerlist.html  dashboardeducation.html  footer.html  header.html  home.html  index-test.html  index.html  jobpage.html  login.html  navbar (copy).html  navbar.html  navbareducation.html  register.html  studentadd.html  studentdelete.html  studentedit.html  studentindex.html  studentlist.html
