[tool.poetry]
name = "repl-nix-saibas-careers-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_saibas_careers_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.29"
mysql-connector-python = "^8.4.0"
passlib = "^1.7.4"
wtforms = "^3.1.2"
markupsafe = "^2.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
